# aadhaar_authentication

./: README.md  auth20_success.xml  auth25_success.xml  auth_response.xml  auth_success.xml  otp.xml  otp_failure.xml  otp_success.xml
uidai/: configure  configure.ac
uidai/.deps/: Trench-auth.Po  Trench-otp.Po  Trench-uidai.Po  Trench-util.Po
uidai/autom4te.cache/: output.1  requests  traces.0  traces.1
uidai/gui/: auth16.tk  auth20.tk  auth25.tk  auth_ui16.tk  auth_ui20.tk  auth_ui25.tk  ekyc20.tk  ekyc21.tk  ekyc25.tk  main.tk  otp16.tk  otp25.tk  otp_ui16.tk  response.tk  util.tk
uidai/preproduction/: aclocal.m4  cipher_suites.txt  configure.ac
uidai/preproduction/autom4te.cache/: traces.1
uidai/preproduction/src/: common.h  ekyc.c  otp.c  uidai.c  util.c
uidai/production/autom4te.cache/: requests  traces.0
uidai/production/src/: Makefile.am  Makefile.in  auth.h  config.h  ekyc.h  otp.h
uidai/src/: Makefile.am  Makefile.in  auth.c  type.h  uidai.c  uidai.h
uidai/staging/: Makefile.am  Makefile.in  configure
uidai/staging/autom4te.cache/: output.0  requests
uidai/staging/src/: .auth.c.swp  .uidai.c.swp  Makefile.am  Makefile.in  auth.c  auth.h  ekyc.c  ekyc.h  otp.c  otp.h  uidai.c  uidai.h  util.c  util.h
